2004-08-15  Richard Hult  <richard@imendio.com>

	* configure.in: Remove unused dependencies.

	* src/planner-eds-plugin.c: Remove libgnome includes.

	* src/eel-canvas-rect.c: (eel_canvas_rect_init),
	(eel_canvas_rect_finalize), (eel_canvas_rect_update),
	(eel_canvas_rect_realize), (eel_canvas_rect_unrealize): Get rid of
	libgnome includes.

2004-08-11  Richard Hult  <richard@imendio.com>

	* src/planner-window.c (window_about_cb): Change
	translator_credits to translator-credits on request from the i18n
	guys. Update the planner link.

2004-08-12  Alvaro del Castillo  <acs@barrapunto.com>
	
	* libplanner-1.pc.in: removed hard coded Postgres flags

2004-08-12  Alvaro del Castillo  <acs@barrapunto.com>
	
	* src/planner-eds-plugin.c:
	(eds_find_resource): search if a resource was imported.
	(eds_import_resource): checks if a resource was imported and update
	it if it was already in the resource list.
	
2004-08-11  Alvaro del Castillo  <acs@barrapunto.com>
	
	* src/planner-eds-plugin.c:
	Store the e-d-s UID as a custom property in resources.
	
2004-08-10  Alvaro del Castillo  <acs@barrapunto.com>
	
	* src/planner-eds-plugin.c: 
	Fixed castings and some little style issues

2004-08-10  Alvaro del Castillo  <acs@barrapunto.com>

	* configure.in:
	* src/Makefile.am:
	Added support for enable evolution data server (eds) plugin
	* data/glade/Makefile.am:
	* data/glade/eds.glade (added):
	GUI for the evolution data server (eds) plugin
	* data/ui/Makefile.am:
	* data/ui/main-window.ui
	* data/ui/eds-plugin.ui (added)
	* src/planner-window.c:
	New Import menu and new entry in Import for eds plugin
	* src/planner-eds-plugin.c (added):
	eds plugin implementation
	
2004-08-09  Richard Hult  <richard@imendio.com>

	* libegg/recent-files/: Sync (even though we're not using this at
	the moment).

2004-08-09  Richard Hult  <richard@imendio.com>

	* libplanner/Makefile.am: Remove mrp-intl.h
	* libplanner/*.c: Change mrp-intl.h to glib/gi18n.h.